--- a/.github/workflows/push-main-image-ghcr.yml
+++ b/.github/workflows/push-main-image-ghcr.yml
@@ -29,5 +29,5 @@ jobs:
           - name: 'Build Inventory Image'
             run: |
               # docker build . --tag ghcr.io/manimatter/decluttarr:latest
-              docker build docker/Dockerfile --tag ghcr.io/manimatter/decluttarr:latest             
+              docker build . --tag ghcr.io/manimatter/decluttarr:latest             
               docker push ghcr.io/manimatter/decluttarr:latest
