--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -5,7 +5,7 @@ ENV IS_IN_DOCKER 1
 
 WORKDIR /app
 
-COPY docker/requirements.txt ./
+COPY ./docker/requirements.txt ./
 RUN pip install --no-cache-dir -r requirements.txt
 
 COPY . .
