--- a/.github/workflows/push-main-image-ghcr.yml
+++ b/.github/workflows/push-main-image-ghcr.yml
@@ -26,6 +26,11 @@ jobs:
               username: ${{github.actor}}
               password: ${{secrets.GITHUB_TOKEN}}
 
+          - name: Checkout  
+            uses: actions/checkout@v2  
+            with:  
+                fetch-depth: 0  
+
           - name: tag-version
             uses: juliansangillo/tag-version@v1.5
             with:  
