--- a/.github/workflows/push-main-image-ghcr.yml
+++ b/.github/workflows/push-main-image-ghcr.yml
@@ -26,15 +26,16 @@ jobs:
               username: ${{github.actor}}
               password: ${{secrets.GITHUB_TOKEN}}
 
-          - name: Checkout  
-            uses: actions/checkout@v2  
-            with:  
-                fetch-depth: 0  
 
-          - name: tag-version
-            uses: juliansangillo/tag-version@v1.5
-            with:  
-                production-branch: main 
+
+          - uses: actions/checkout@v2
+            with:
+              fetch-depth: '0'
+          - name: Bump version and push tag
+            uses: anothrNick/github-tag-action@1.36.0
+            env:
+              GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+              WITH_V: true
 
           # - name: 'Build Inventory Image'
           #   run: |
