--- a/.github/workflows/push-main-image-ghcr.yml
+++ b/.github/workflows/push-main-image-ghcr.yml
@@ -38,7 +38,7 @@ jobs:
           - name: "Build, Tag, and push the Docker image"
             env:
               IMAGE_NAME: ghcr.io/manimatter/decluttarr
-              IMAGE_TAG: ${{ setversion.new_tag }}
+              IMAGE_TAG: ${{ steps.setversion.new_tag }}
             run: |
               docker build -f docker/Dockerfile -t $IMAGE_NAME:$IMAGE_TAG .
               docker push $IMAGE_NAME:$IMAGE_TAG
