--- a/.github/workflows/push-main-image-ghcr.yml
+++ b/.github/workflows/push-main-image-ghcr.yml
@@ -46,7 +46,7 @@ jobs:
       - name: "Build, Tag, and push the Docker image"
         env:
           IMAGE_NAME: ghcr.io/manimatter/decluttarr
-          IMAGE_TAG: ${{ steps.build.outputs.new_tag }}
+          IMAGE_TAG: ${{ steps.setversion.outputs.new_tag }}
         run: |
           docker build -f docker/Dockerfile -t $IMAGE_NAME:$IMAGE_TAG .
           docker push $IMAGE_NAME:$IMAGE_TAG
