--- a/.github/workflows/push-main-image-ghcr.yml
+++ b/.github/workflows/push-main-image-ghcr.yml
@@ -9,10 +9,25 @@ on:
     tags: ["v[0-9]+.[0-9]+.[0-9]*"]
 
 jobs:
+  unit-tests: 
+    runs-on: ubuntu-latest 
+    steps:
+    - uses: actions/checkout@v4
+    - name: Set up Python
+      uses: actions/setup-python@v4
+      with:
+        python-version: '3.x'
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install -r requirements.txt
+    - name: Test with pytest
+      run: |
+        pip install pytest pytest-cov
+        pytest -vv   
+
   build:
-    runs-on: ubuntu-latest
-    # outputs:
-    #   new_tag: ${{ steps.setversion.outputs.new_tag }}    
+    runs-on: ubuntu-latest 
     defaults:
       run:
         working-directory: '.'
