--- a/.github/workflows/push-main-image-ghcr.yml
+++ b/.github/workflows/push-main-image-ghcr.yml
@@ -11,19 +11,22 @@ on:
 jobs:
   unit-tests: 
     runs-on: ubuntu-latest 
+    defaults:
+      run:
+        working-directory: 'pytest src/utils/'    
     steps:
     - uses: actions/checkout@v4
     - name: Set up Python
       uses: actions/setup-python@v4
       with:
         python-version: '3.x'
-    - name: Install dependencies
+    - name: Install pip and pytest
       run: |
         python -m pip install --upgrade pip
+        pip install pytest pytest-cov 
     - name: Test with pytest
       run: |
-        pip install pytest pytest-cov
-        pytest -vv   
+        pytest test_nest_functions.py -vv   
 
   build:
     runs-on: ubuntu-latest 
