--- a/.github/workflows/push-main-image-ghcr.yml
+++ b/.github/workflows/push-main-image-ghcr.yml
@@ -13,7 +13,7 @@ jobs:
     runs-on: ubuntu-latest 
     defaults:
       run:
-        working-directory: 'src/utils/'    
+        working-directory: './src/utils/'    
     steps:
     - uses: actions/checkout@v4
     - name: Set up Python
