--- a/.github/workflows/push-main-image-ghcr.yml
+++ b/.github/workflows/push-main-image-ghcr.yml
@@ -26,7 +26,7 @@ jobs:
         pip install pytest pytest-cov 
     - name: Test with pytest
       run: |
-        pytest test_nest_functions.py -vv   
+        pytest /home/runner/work/decluttarr/src/utils/test_nest_functions.py -vv   
 
   build:
     runs-on: ubuntu-latest 
