--- a/docker/Sample docker-compose.yml
+++ b/docker/Sample docker-compose.yml
@@ -6,10 +6,8 @@
      TZ: Europe/Zurich
      PUID: 1000
      PGID: 1000
-
      # General
      LOG_LEVEL: INFO 
-
      # Features 
      REMOVE_TIMER: 10
      REMOVE_FAILED: True
@@ -19,15 +17,13 @@
      REMOVE_UNMONITORED: True
      PERMITTED_ATTEMPTS: 3
      NO_STALLED_REMOVAL_QBIT_TAG: Don't Kill If Stalled
-
      # Radarr
      RADARR_URL: http://radarr:7878
      RADARR_KEY: $RADARR_API_KEY
-
      # Sonarr
      SONARR_URL: http://sonarr:8989
      SONARR_KEY: $SONARR_API_KEY
-
      # qBitorrent
      QBITTORRENT_URL: http://qbittorrent:8080
-     
+     #QBITTORRENT_USERNAME: Your Name
+     #QBITTORRENT_PASSWORD: Your Password
