--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,11 +9,13 @@ jobs:
     runs-on: ubuntu-latest 
     defaults:
       run:
-        working-directory: './src/utils/'    
+        working-directory: '.'    
     steps:    
     - uses: actions/checkout@v4
-    - name: show branch name
-      run: echo ${GITHUB_REF##*/}    
+    # - name: show branch name
+    #   run: echo ${GITHUB_REF##*/}    
+    - name: show current path
+      run: echo pwd   
     - name: Set up Python
       uses: actions/setup-python@v4
       with:
