--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,7 +15,7 @@ jobs:
     # - name: show branch name
     #   run: echo ${GITHUB_REF##*/}    
     - name: show current path
-      run: echo "${HOME}/.local/bin"
+      run: echo ${{ github.workspace }}
     - name: Set up Python
       uses: actions/setup-python@v4
       with:
