--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,7 +17,7 @@ jobs:
     - name: show current path
       run: |
         echo ${{ github.workspace }}
-        ls
+        ls -ahl
     - name: Set up Python
       uses: actions/setup-python@v4
       with:
