--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,9 +26,10 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install pytest pytest-cov 
+        pip install docker/requirements.txt
     - name: Test with pytest
       run: |
-        pytest test_nest_functions.py -vv   
+        pytest src/utils/test_nest_functions.py -vv   
 
 
   build-main:
