--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,7 +26,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install pytest pytest-cov 
-        pip install docker/requirements.txt
+        pip install -r docker/requirements.txt
     - name: Test with pytest
       run: |
         pytest src/utils/test_nest_functions.py -vv   
