--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,7 +29,7 @@ jobs:
         pip install -r docker/requirements.txt
     - name: Test with pytest
       run: |
-        pytest ./src/utils/test_nest_functions.py -vv   
+        python -m pytest 
 
 
   build-main:
