--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,8 +24,8 @@ jobs:
         python-version: '3.x'
     - name: Install pip and pytest
       run: |
-        python -m pip install --upgrade pip
-        pip install pytest pytest-cov 
+        apt-get install -y python3-pip --fix-missing
+        apt-get install -y python3-pytest
         pip install -r docker/requirements.txt
 
     - name: Test with pytest
