--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -96,3 +96,10 @@ jobs:
         run: |
           docker build -f docker/Dockerfile -t $IMAGE_NAME:$IMAGE_TAG .
           docker push $IMAGE_NAME:$IMAGE_TAG
+
+
+      - name: "Delete untagged versions"
+        uses: actions/delete-package-versions@v4
+        with: 
+          package-name: 'decluttarr'
+          delete-only-untagged-versions: 'true'
