--- a/docker/Sample docker-compose.yml
+++ b/docker/Sample docker-compose.yml
@@ -24,6 +24,9 @@
      # Sonarr
      SONARR_URL: http://sonarr:8989
      SONARR_KEY: $SONARR_API_KEY
+     # Lidarr
+     LIDARR_URL: http://lidarr:8686
+     LIDARR_KEY: $LIDARR_KEY     
      # qBitorrent
      QBITTORRENT_URL: http://qbittorrent:8080
      #QBITTORRENT_USERNAME: Your Name
