Fixing python version to 3.10.13, since later versions seem to have issues with certain pip requirements

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,4 +1,5 @@
-FROM python:3.9-slim-buster
+#FROM python:3.9-slim-buster
+FROM python:3.10.13-slim
 LABEL org.opencontainers.image.source="https://github.com/ManiMatter/decluttarr"
                                                       
 ENV IS_IN_DOCKER 1
