--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -64,14 +64,14 @@ jobs:
 
       - name: "Build, Tag, and push the Docker image"
         env:
-          IMAGE_NAME: ghcr.io/manimatter/decluttarr
+          IMAGE_NAME: ghcr.io/fxsch/decluttarr
           IMAGE_TAG: ${{ steps.setversion.outputs.new_tag }}
         run: |
           docker buildx build --platform linux/amd64,linux/arm64 -t $IMAGE_NAME:$IMAGE_TAG -f docker/Dockerfile --push .
 
       - name: "Build, Tag, and push the Docker image"
         env:
-          IMAGE_NAME: ghcr.io/manimatter/decluttarr
+          IMAGE_NAME: ghcr.io/fxsch/decluttarr
           IMAGE_TAG: latest
         run: |
           docker buildx build --platform linux/amd64,linux/arm64 -t $IMAGE_NAME:$IMAGE_TAG -f docker/Dockerfile --push .
