Updated Dockerfile to reference this repo instead of the one this was forked from

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,6 +1,6 @@
 #FROM python:3.9-slim-buster
 FROM python:3.10.13-slim
-LABEL org.opencontainers.image.source="https://github.com/ManiMatter/decluttarr"
+LABEL org.opencontainers.image.source="https://github.com/Fxsch/decluttarr"
                                                       
 ENV IS_IN_DOCKER 1
 
