--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,26 +9,6 @@ on:
   workflow_dispatch:
 
 jobs:
-  # unit-tests: 
-  #   runs-on: ubuntu-latest 
-  #   defaults:
-  #     run:
-  #       working-directory: '.'    
-  #   steps:    
-  #   - uses: actions/checkout@v4
-
-  #   - name: Set up Python
-  #     uses: actions/setup-python@v4
-  #     with:
-  #       python-version: '3.x'
-  #   - name: Install pip and pytest
-  #     run: |
-  #       python -m pip install --upgrade pip
-  #       pip install -r docker/requirements.txt
-  #   - name: Test with pytest
-  #     run: |
-  #       python3 -m pytest --import-mode=append tests/
-
   build-main:
     runs-on: ubuntu-latest 
     defaults:
@@ -64,40 +44,15 @@ jobs:
 
       - name: "Build, Tag, and push the Docker image"
         env:
-          IMAGE_NAME: ghcr.io/fxsch/decluttarr
+          IMAGE_NAME: ghcr.io/manimatter/decluttarr
           IMAGE_TAG: ${{ steps.setversion.outputs.new_tag }}
         run: |
           docker buildx build --platform linux/amd64,linux/arm64 -t $IMAGE_NAME:$IMAGE_TAG -f docker/Dockerfile --push .
 
       - name: "Build, Tag, and push the Docker image"
         env:
-          IMAGE_NAME: ghcr.io/fxsch/decluttarr
+          IMAGE_NAME: ghcr.io/manimatter/decluttarr
           IMAGE_TAG: latest
         run: |
           docker buildx build --platform linux/amd64,linux/arm64 -t $IMAGE_NAME:$IMAGE_TAG -f docker/Dockerfile --push .
 
-  # build-dev:
-  #   if: github.ref == 'refs/heads/dev'
-  #   needs: unit-tests
-  #   runs-on: ubuntu-latest 
-  #   defaults:
-  #     run:
-  #       working-directory: '.'
-  #   steps: 
-  #     - name: 'Checkout GitHub Action'
-  #       uses: actions/checkout@main
-
-  #     - name: 'Login to GitHub Container Registry'
-  #       uses: docker/login-action@v1
-  #       with:
-  #         registry: ghcr.io
-  #         username: ${{github.actor}}
-  #         password: ${{secrets.GITHUB_TOKEN}}
-
-  #     - name: "Build, Tag, and push the Docker image"
-  #       env:
-  #         IMAGE_NAME: ghcr.io/manimatter/decluttarr
-  #         IMAGE_TAG: dev
-  #       run: |
-  #         docker build -f docker/Dockerfile -t $IMAGE_NAME:$IMAGE_TAG .
-  #         docker push $IMAGE_NAME:$IMAGE_TAG
