--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -35,6 +35,12 @@ jobs:
       - name: 'Checkout GitHub Action'
         uses: actions/checkout@main
 
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v1
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1        
+
       - name: 'Login to GitHub Container Registry'
         uses: docker/login-action@v1
         with:
@@ -47,8 +53,7 @@ jobs:
           IMAGE_NAME: ghcr.io/manimatter/decluttarr
           IMAGE_TAG: dev
         run: |
-          docker build -f docker/Dockerfile -t $IMAGE_NAME:$IMAGE_TAG .
-          docker push $IMAGE_NAME:$IMAGE_TAG
+          docker buildx build --platform linux/amd64,linux/arm64 -t $IMAGE_NAME:$IMAGE_TAG --label com.decluttarr.version=$IMAGE_TAG -f docker/Dockerfile --push .
           
       - name: "Delete untagged versions"
         uses: actions/delete-package-versions@v4
