--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -3,6 +3,14 @@
 # sudo docker run --rm -it  --entrypoint sh  ghcr.io/manimatter/decluttarr:dev 
 
 FROM python:3.10.13-slim
+
+# Define a build-time argument for IMAGE_TAG
+ARG IMAGE_TAG
+
+# Set an environment variable using the build-time argument
+ENV IMAGE_TAG_ENV=$IMAGE_TAG
+
+
 LABEL org.opencontainers.image.source="https://github.com/ManiMatter/decluttarr"
                                                       
 ENV IS_IN_DOCKER 1
