--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -35,6 +35,12 @@ jobs:
       - name: 'Checkout GitHub Action'
         uses: actions/checkout@main
 
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v1
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+
       - name: 'Login to GitHub Container Registry'
         uses: docker/login-action@v1
         with:
@@ -46,9 +52,17 @@ jobs:
         env:
           IMAGE_NAME: ghcr.io/manimatter/decluttarr
           IMAGE_TAG: dev
+          SHORT_COMMIT_ID: ${{ github.sha_short }}
         run: |
-          docker build -f docker/Dockerfile -t $IMAGE_NAME:$IMAGE_TAG --label com.decluttarr.version=$IMAGE_TAG --build-arg IMAGE_TAG=$IMAGE_TAG .
-          docker push $IMAGE_NAME:$IMAGE_TAG
+          docker buildx build \
+            --platform linux/amd64,linux/arm64 \
+            -t $IMAGE_NAME:$IMAGE_TAG \
+            --label com.decluttarr.version=$IMAGE_TAG \
+            --label com.decluttarr.commit=$SHORT_COMMIT_ID
+            --build-arg IMAGE_TAG=$IMAGE_TAG \
+            --build-arg SHORT_COMMIT_ID=$SHORT_COMMIT_ID \
+            -f docker/Dockerfile \
+            --push
           
       - name: "Delete untagged versions"
         uses: actions/delete-package-versions@v4
