--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -46,7 +46,16 @@ jobs:
         env:
           IMAGE_NAME: ghcr.io/manimatter/decluttarr
           IMAGE_TAG: ${{ steps.setversion.outputs.new_tag }}
+          SHORT_COMMIT_ID: ${{ github.sha_short }}
         run: |
-          docker buildx build --platform linux/amd64,linux/arm64 -t $IMAGE_NAME:$IMAGE_TAG -t $IMAGE_NAME:latest --label com.decluttarr.version=$IMAGE_TAG --build-arg IMAGE_TAG=$IMAGE_TAG -f docker/Dockerfile --push .
-
+          docker buildx build \
+            --platform linux/amd64,linux/arm64 \
+            -t $IMAGE_NAME:$IMAGE_TAG \
+            -t $IMAGE_NAME:latest \
+            --label com.decluttarr.version=$IMAGE_TAG \
+            --label com.decluttarr.commit=$SHORT_COMMIT_ID
+            --build-arg IMAGE_TAG=$IMAGE_TAG \
+            --build-arg SHORT_COMMIT_ID=$SHORT_COMMIT_ID \
+            -f docker/Dockerfile \
+            --push
 
