--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -58,7 +58,7 @@ jobs:
             --platform linux/amd64,linux/arm64 \
             -t $IMAGE_NAME:$IMAGE_TAG \
             --label com.decluttarr.version=$IMAGE_TAG \
-            --label com.decluttarr.commit=$SHORT_COMMIT_ID
+            --label com.decluttarr.commit=$SHORT_COMMIT_ID \
             --build-arg IMAGE_TAG=$IMAGE_TAG \
             --build-arg SHORT_COMMIT_ID=$SHORT_COMMIT_ID \
             -f docker/Dockerfile \
