--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -62,7 +62,7 @@ jobs:
             --build-arg IMAGE_TAG=$IMAGE_TAG \
             --build-arg SHORT_COMMIT_ID=$SHORT_COMMIT_ID \
             -f docker/Dockerfile \
-            --push
+            --push .
           
       - name: "Delete untagged versions"
         uses: actions/delete-package-versions@v4
