--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -57,5 +57,5 @@ jobs:
             --build-arg IMAGE_TAG=$IMAGE_TAG \
             --build-arg SHORT_COMMIT_ID=$SHORT_COMMIT_ID \
             -f docker/Dockerfile \
-            --push
+            --push .
 
