--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -64,7 +64,7 @@ jobs:
             --label com.decluttarr.version=$IMAGE_TAG \
             --label com.decluttarr.commit=$SHORT_COMMIT_ID \
             --build-arg IMAGE_TAG=$IMAGE_TAG \
-            --build-arg SHORT_COMMIT_ID=${{ env.COMMIT_SHORT_SHA }} \
+            --build-arg SHORT_COMMIT_ID=$COMMIT_SHORT_SHA \
             -f docker/Dockerfile \
             --push .
           
