--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -59,8 +59,7 @@ jobs:
           IMAGE_NAME: ghcr.io/manimatter/decluttarr
           IMAGE_TAG: dev
         run: |
-          docker buildx build \
-            --platform linux/amd64,linux/arm64 \
+          docker build \
             -t $IMAGE_NAME:$IMAGE_TAG \
             --label com.decluttarr.version=$IMAGE_TAG \
             --label com.decluttarr.commit=$SHORT_COMMIT_ID \
