--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -25,6 +25,7 @@ jobs:
         python3 -m pytest --import-mode=append tests/
 
   build-dev:
+    # if: github.ref == 'refs/heads/dev'
     needs: unit-tests
     runs-on: ubuntu-latest 
     defaults:
@@ -33,6 +34,12 @@ jobs:
     steps: 
       - name: 'Checkout GitHub Action'
         uses: actions/checkout@main
+
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v1
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
 
       - name: 'Login to GitHub Container Registry'
         uses: docker/login-action@v1
@@ -60,7 +67,6 @@ jobs:
             --build-arg SHORT_COMMIT_ID=$SHORT_COMMIT_ID \
             -f docker/Dockerfile \
             --push .
-
           
       - name: "Delete untagged versions"
         uses: actions/delete-package-versions@v4
