--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -25,7 +25,6 @@ jobs:
         python3 -m pytest --import-mode=append tests/
 
   build-dev:
-    # if: github.ref == 'refs/heads/dev'
     needs: unit-tests
     runs-on: ubuntu-latest 
     defaults:
@@ -35,11 +34,13 @@ jobs:
       - name: 'Checkout GitHub Action'
         uses: actions/checkout@main
 
-      # - name: Set up QEMU
-      #   uses: docker/setup-qemu-action@v1
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v1
 
-      # - name: Set up Docker Buildx
-      #   uses: docker/setup-buildx-action@v1
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+        with:
+          driver-opts: image=ubuntu:latest
 
       - name: 'Login to GitHub Container Registry'
         uses: docker/login-action@v1
@@ -60,6 +61,7 @@ jobs:
           IMAGE_TAG: dev
         run: |
           docker buildx build \
+            --driver docker-containerd \
             --platform linux/amd64,linux/arm64 \
             -t $IMAGE_NAME:$IMAGE_TAG \
             --label com.decluttarr.version=$IMAGE_TAG \
