--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -41,6 +41,7 @@ jobs:
         uses: docker/setup-buildx-action@v1
         with:
           driver-opts: image=ubuntu:latest
+          version: 0.6.3
 
       - name: 'Login to GitHub Container Registry'
         uses: docker/login-action@v1
@@ -62,6 +63,7 @@ jobs:
         run: |
           docker buildx build \
             --driver docker-containerd \
+            --progress plain \
             --platform linux/amd64,linux/arm64 \
             -t $IMAGE_NAME:$IMAGE_TAG \
             --label com.decluttarr.version=$IMAGE_TAG \
