--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -34,13 +34,11 @@ jobs:
       - name: 'Checkout GitHub Action'
         uses: actions/checkout@main
 
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v1
+      # - name: Set up QEMU
+      #   uses: docker/setup-qemu-action@v1
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
-        with:
-          driver-opts: image=ubuntu:latest
+      # - name: Set up Docker Buildx
+      #   uses: docker/setup-buildx-action@v1
 
       - name: 'Login to GitHub Container Registry'
         uses: docker/login-action@v1
@@ -60,10 +58,8 @@ jobs:
           IMAGE_NAME: ghcr.io/manimatter/decluttarr
           IMAGE_TAG: dev
         run: |
-          docker buildx build \
-            --driver docker-containerd \
+          docker build \
             --progress plain \
-            --platform linux/amd64,linux/arm64 \
             -t $IMAGE_NAME:$IMAGE_TAG \
             --label com.decluttarr.version=$IMAGE_TAG \
             --label com.decluttarr.commit=$SHORT_COMMIT_ID \
@@ -71,7 +67,23 @@ jobs:
             --build-arg SHORT_COMMIT_ID=$SHORT_COMMIT_ID \
             -f docker/Dockerfile \
             --push .
-          
+
+      # - name: "Build, Tag, and push the Docker image"
+      #   env:
+      #     IMAGE_NAME: ghcr.io/manimatter/decluttarr
+      #     IMAGE_TAG: dev
+      #   run: |
+      #     docker buildx build \                     <<<<<<<<<<<<<<<<<<<<< creates manifest issues... don't know how to solve that
+      #       --platform linux/amd64,linux/arm64 \    <<<<<<<<<<<<<<<<<<<<< creates manifest issues... don't know how to solve that
+      #       --progress plain \
+      #       -t $IMAGE_NAME:$IMAGE_TAG \
+      #       --label com.decluttarr.version=$IMAGE_TAG \
+      #       --label com.decluttarr.commit=$SHORT_COMMIT_ID \
+      #       --build-arg IMAGE_TAG=$IMAGE_TAG \
+      #       --build-arg SHORT_COMMIT_ID=$SHORT_COMMIT_ID \
+      #       -f docker/Dockerfile \
+      #       --push .
+
       - name: "Delete untagged versions"
         uses: actions/delete-package-versions@v4
         with: 
