Stop creating new dev-image when just readme changed

--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -3,6 +3,9 @@ name: Unit Tests & Dev Deployment
 on:
   push:
     branches: [ "dev" ]
+    paths:
+      - '**/*'
+      - '!README.md'    
 
 jobs:
   unit-tests: 
