--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -5,7 +5,8 @@ on:
     branches: [ "dev" ]
     paths:
       - '**/*'
-      - '!README.md'    
+      - '!README.md'  
+      - '!CONTRIBUTE.md'  
 
 jobs:
   unit-tests: 
