--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,11 +18,11 @@ jobs:
       - name: 'Checkout GitHub Action'
         uses: actions/checkout@main
 
-      # - name: Set up QEMU
-      #   uses: docker/setup-qemu-action@v1
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
 
-      # - name: Set up Docker Buildx
-      #   uses: docker/setup-buildx-action@v1
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
 
       - name: 'Login to GitHub Container Registry'
         uses: docker/login-action@v1
@@ -51,9 +51,10 @@ jobs:
       - name: "Build, Tag, and push the Docker image"
         env:
           IMAGE_NAME: ghcr.io/manimatter/decluttarr
-          IMAGE_TAG: ${{ steps.setversion.outputs.new_tag }}
+          IMAGE_TAG: ${{ steps.setversion.outputs.new_tag }} 
         run: |
-          docker build \
+          docker buildx build \
+            --platform linux/amd64,linux/arm64 -f docker/Dockerfile . \
             --progress plain \
             -t $IMAGE_NAME:$IMAGE_TAG \
             -t $IMAGE_NAME:latest \
@@ -61,22 +62,4 @@ jobs:
             --label com.decluttarr.commit=$SHORT_COMMIT_ID \
             --build-arg IMAGE_TAG=$IMAGE_TAG \
             --build-arg SHORT_COMMIT_ID=$SHORT_COMMIT_ID \
-            -f docker/Dockerfile \
-            --push .
-
-      # - name: "Build, Tag, and push the Docker image"
-      #   env:
-      #     IMAGE_NAME: ghcr.io/manimatter/decluttarr
-      #     IMAGE_TAG: ${{ steps.setversion.outputs.new_tag }}   
-      #   run: |
-      #     docker buildx build \                         <<<<<<<<<<<<<<<<<<<<< creates manifest issues... don't know how to solve that
-      #       --platform linux/amd64,linux/arm64 \        <<<<<<<<<<<<<<<<<<<<< creates manifest issues... don't know how to solve that
-      #       --progress plain \      
-      #       -t $IMAGE_NAME:$IMAGE_TAG \
-      #       -t $IMAGE_NAME:latest \
-      #       --label com.decluttarr.version=$IMAGE_TAG \
-      #       --label com.decluttarr.commit=$SHORT_COMMIT_ID \
-      #       --build-arg IMAGE_TAG=$IMAGE_TAG \
-      #       --build-arg SHORT_COMMIT_ID=$SHORT_COMMIT_ID \
-      #       -f docker/Dockerfile \
-      #       --push .
+            --push \
