--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -73,9 +73,9 @@ jobs:
             --push \
    
 
-      - name: "Delete untagged versions"
-        uses: actions/delete-package-versions@v4
-        with: 
-          package-name: 'decluttarr'
-          package-type: 'container'
-          delete-only-untagged-versions: 'true'
+      # - name: "Delete untagged versions"
+      #   uses: actions/delete-package-versions@v4
+      #   with: 
+      #     package-name: 'decluttarr'
+      #     package-type: 'container'
+      #     delete-only-untagged-versions: 'true'
