--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -63,3 +63,4 @@ jobs:
             --build-arg IMAGE_TAG=$IMAGE_TAG \
             --build-arg SHORT_COMMIT_ID=$SHORT_COMMIT_ID \
             --push \
+            --each "docker tag {{.ImageID}} $IMAGE_NAME:$IMAGE_TAG-{{.TargetPlatform.Architecture}}"
