--- a/.github/workflows/main-multi.yml
+++ b/.github/workflows/main-multi.yml
@@ -20,11 +20,6 @@ jobs:
       - name: 'Checkout GitHub Action'
         uses: actions/checkout@main
 
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v3
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
 
       - name: 'Login to GitHub Container Registry'
         uses: docker/login-action@v1
@@ -44,18 +39,38 @@ jobs:
           IMAGE_NAME: ghcr.io/manimatter/decluttarr
           IMAGE_TAG: maintest
         run: |
-          docker buildx build \
-            --platform linux/amd64,linux/arm64 -f docker/Dockerfile . \
+          docker buildx create --use    --name $IMAGE_TAG node-amd64
+          docker buildx create --append --name $IMAGE_TAG node-arm64
+          docker buildx build --platform linux/amd64,linux/arm64 \
+            -f docker/Dockerfile . \
             --progress plain \
             -t $IMAGE_NAME:$IMAGE_TAG \
             --label com.decluttarr.version=$IMAGE_TAG \
             --label com.decluttarr.commit=$SHORT_COMMIT_ID \
-            --annotations "org.opencontainers.image.description=$IMAGE_TAG" \
             --build-arg IMAGE_TAG=$IMAGE_TAG \
             --build-arg SHORT_COMMIT_ID=$SHORT_COMMIT_ID \
             --push \
    
 
+
+#    $ docker buildx create --use --name mybuild node-amd64
+# mybuild
+# $ docker buildx create --append --name mybuild node-arm64
+# $ docker buildx build --platform linux/amd64,linux/arm64 .
+
+
+        # run: |
+        #   docker buildx build \
+        #     --platform linux/amd64,linux/arm64 -f docker/Dockerfile . \
+        #     --progress plain \
+        #     -t $IMAGE_NAME:$IMAGE_TAG \
+        #     --label com.decluttarr.version=$IMAGE_TAG \
+        #     --label com.decluttarr.commit=$SHORT_COMMIT_ID \
+        #     --build-arg IMAGE_TAG=$IMAGE_TAG \
+        #     --build-arg SHORT_COMMIT_ID=$SHORT_COMMIT_ID \
+        #     --push \
+
+        
       # - name: "Delete untagged versions"
       #   uses: actions/delete-package-versions@v4
       #   with: 
