--- a/.github/workflows/main-multi.yml
+++ b/.github/workflows/main-multi.yml
@@ -39,8 +39,8 @@ jobs:
           IMAGE_NAME: ghcr.io/manimatter/decluttarr
           IMAGE_TAG: maintest
         run: |
-          docker buildx create --use    --name $IMAGE_TAG node-amd64
-          docker buildx create --append --name $IMAGE_TAG node-arm64
+          docker buildx create --use    --name $IMAGE_TAG node-amd64 \
+          docker buildx create --append --name $IMAGE_TAG node-arm64 \
           docker buildx build --platform linux/amd64,linux/arm64 \
             -f docker/Dockerfile . \
             --progress plain \
@@ -70,7 +70,23 @@ jobs:
         #     --build-arg SHORT_COMMIT_ID=$SHORT_COMMIT_ID \
         #     --push \
 
-        
+      #  - name: "Build, Tag, and push the Docker image"
+      #   env:
+      #     IMAGE_NAME: ghcr.io/manimatter/decluttarr
+      #     IMAGE_TAG: dev
+      #   run: |
+      #     docker build \
+      #       --progress plain \
+      #       -t $IMAGE_NAME:$IMAGE_TAG \
+      #       --label com.decluttarr.version=$IMAGE_TAG \
+      #       --label com.decluttarr.commit=$SHORT_COMMIT_ID \
+      #       --build-arg IMAGE_TAG=$IMAGE_TAG \
+      #       --build-arg SHORT_COMMIT_ID=$SHORT_COMMIT_ID \
+      #       -f docker/Dockerfile \
+      #       --push .
+
+
+
       # - name: "Delete untagged versions"
       #   uses: actions/delete-package-versions@v4
       #   with: 
